Fix: fixed alias on nginx config

--- a/nginx-docker.conf
+++ b/nginx-docker.conf
@@ -1,7 +1,7 @@
 server {
-    listen 9000;
+    listen 8000;
     location /site/ {
-        root /usr/share/nginx/html/;
+        alias /usr/share/nginx/html/;
         index index.html;
     }
 }
